--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,6 +108,10 @@
             <label>Photos (optional, up to <%= maxImagesPerPost %>)</label>
             <input type="file" name="photos" accept="image/*" multiple />
           </div>
+          <div class="form-field">
+            <label>Video (optional, 1 file)</label>
+            <input type="file" name="video" accept="video/*" />
+          </div>
           <div class="upload-preview" id="uploadPreview" hidden>
             <img id="uploadPreviewImg" alt="Selected photo preview" />
             <div class="upload-preview-meta">
@@ -169,6 +173,14 @@
                     <% } %>
                   </div>
                 </a>
+              <% } %>
+              <% if (e.video_filename) { %>
+                <div class="entry-video-wrap">
+                  <video class="entry-video" controls preload="metadata">
+                    <source src="<%= fileUrl(e.video_filename) %>" <% if (e.video_mimetype) { %>type="<%= e.video_mimetype %>"<% } %> />
+                    Your browser does not support the video tag.
+                  </video>
+                </div>
               <% } %>
               <div class="meta">
                 <% if (isDeleted) { %>
