--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,11 +106,22 @@
           <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="form-field">
             <label>Photos (optional, up to <%= maxImagesPerPost %>)</label>
-            <input type="file" name="photos" accept="image/*" multiple />
+            <input
+              type="file"
+              name="photos"
+              accept="image/*"
+              multiple
+              data-max-count="<%= maxImagesPerPost %>"
+            />
           </div>
           <div class="form-field">
             <label>Video (optional, 1 file)</label>
-            <input type="file" name="video" accept="video/*" />
+            <input
+              type="file"
+              name="video"
+              accept="video/*"
+              data-max-size-mb="<%= maxVideoFileSizeMb %>"
+            />
           </div>
           <div class="upload-preview" id="uploadPreview" hidden>
             <img id="uploadPreviewImg" alt="Selected photo preview" />
@@ -166,7 +177,7 @@
                 <a class="entry-image-link" href="/entries/<%= e.id %>">
                   <div class="entry-images <%= e.images.length > 1 ? 'is-multi' : 'is-single' %>">
                     <% previewImages.forEach(function(img) { %>
-                      <img src="<%= fileUrl(img.filename) %>" alt="photo" />
+                      <img src="<%= fileUrl(img.filename) %>" alt="photo" loading="lazy" decoding="async" />
                     <% }) %>
                     <% if (e.images.length > 4) { %>
                       <div class="entry-images-more">+<%= e.images.length - 4 %></div>
@@ -176,7 +187,7 @@
               <% } %>
               <% if (e.video_filename) { %>
                 <div class="entry-video-wrap">
-                  <video class="entry-video" controls preload="metadata">
+                  <video class="entry-video" controls preload="metadata" <% if (e.video_poster_filename) { %>poster="<%= fileUrl(e.video_poster_filename) %>"<% } %>>
                     <source src="<%= fileUrl(e.video_filename) %>" <% if (e.video_mimetype) { %>type="<%= e.video_mimetype %>"<% } %> />
                     Your browser does not support the video tag.
                   </video>
