--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,7 +109,7 @@
             <input
               type="file"
               name="photos"
-              accept="image/*"
+              accept="image/*,.heic,.heif,image/heic,image/heif"
               multiple
               data-max-count="<%= maxImagesPerPost %>"
             />
