--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -55,7 +55,7 @@
         <input
           type="file"
           name="photos"
-          accept="image/*"
+          accept="image/*,.heic,.heif,image/heic,image/heif"
           multiple
           data-max-count="<%= maxImagesPerPost %>"
         />
