--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -50,7 +50,7 @@
           <% if (entry.tags && entry.tags.length > 0) { %>
             <div class="tags-row">
               <% entry.tags.forEach(function(tag) { %>
-                <span class="tag-chip">#<%= tag %></span>
+                <a class="tag-chip" href="/?tag=<%= encodeURIComponent(tag) %>">#<%= tag %></a>
               <% }) %>
             </div>
           <% } %>
