floating action posting button v2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -244,11 +244,11 @@
     </div>
     <% if (userId) { %>
       <a
-        class="create-post-fab"
+        class="create-post-fab sidebar-btn sidebar-fold-toggle"
         href="/entries/new"
         aria-label="Create a new post"
         title="Create Post"
-      ><span aria-hidden="true">+</span></a>
+      >+</a>
     <% } %>
     <script src="/static/script.js"></script>
   </body>
