--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
         <p class="status-note"><em>Viewing pinned published posts only. <a href="/login">Login</a> or <a href="/register">register</a> to create posts.</em></p>
       <% } %>
 
-      <% if (tagShortcuts && tagShortcuts.length > 0) { %>
+      <% if (userRole === 'admin' && tagShortcuts && tagShortcuts.length > 0) { %>
         <section class="tag-shortcuts" aria-label="Tag shortcuts">
           <div class="shortcut-title">Quick Tag Access</div>
           <div class="tag-shortcut-list">
